<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pam.surveywithfragments.MainActivity">

    <EditText
        android:id="@+id/custom_question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="24dp"
        android:text="@string/custom_question_text"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="43dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        android:id="@+id/linearLayout3"/>

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_button"
        android:layout_marginLeft="49dp"
        android:layout_marginStart="49dp"
        android:layout_alignBaseline="@+id/cancel_button"
        android:layout_alignBottom="@+id/cancel_button"
        android:layout_alignLeft="@+id/possible_answer2"
        android:layout_alignStart="@+id/possible_answer2"/>

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/cancel_button"
        android:layout_marginRight="58dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="84dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>
    <EditText
        android:id="@+id/possible_answer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/possible_answer1"
        android:layout_below="@+id/custom_question_text"
        android:layout_alignLeft="@+id/possible_answer2"
        android:layout_alignStart="@+id/possible_answer2"
        android:layout_marginTop="38dp"/>
    <EditText
        android:id="@+id/possible_answer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/possible_answer2"
        android:layout_above="@+id/cancel_button"
        android:layout_toLeftOf="@+id/cancel_button"
        android:layout_toStartOf="@+id/cancel_button"
        android:layout_marginBottom="62dp"/>

</RelativeLayout>