<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pam.surveywithfragments.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="199dp"
        android:id="@+id/linearLayout2">

        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_button_text"/>

        <Button
            android:id="@+id/continue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_button_text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">

    </LinearLayout>

    <TextView
        android:id="@+id/answer1_Counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_alignStart="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="112dp"
        android:text="@string/answer1_count_text"/>

    <TextView
        android:id="@+id/answer2_Counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/answer1_Counter"
        android:layout_alignBottom="@+id/answer1_Counter"
        android:layout_alignEnd="@+id/linearLayout2"
        android:layout_alignRight="@+id/linearLayout2"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:text="@string/answer2_count_text"/>
</RelativeLayout>